# webinar_axumcrud

./: Cargo.toml
src/: db.rs  log.rs  main.rs
