[package]
name = "webinar_axumcrud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
axum = { version = "0.7.5", features = ["tracing"] }
once_cell = "1.18.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
http-body-util = "0.1.0"
serde_json = "1.0.120"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
axum-test-helper = "0.3.0"
